SeleniumGrid/seleniumHub-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selenium-ingress
  annotations:
    nginx.ingress.kubernetes.io: /$1
spec:
  rules:
    - host: my-selenium-grid.com
      http:
        paths:
          - path: /
            backend:
              serviceName: selenium-hub-deployment
              servicePort: 4444
